testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceUseBeforeDef.errors.txt
bug25097.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.


==== bug25097.js (1 errors) ====
    /** @type {C | null} */
               ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const c = null
    class C {
    }
    